[package]
name = "memorix-client-redis-macros"
version = "1.0.0"
repository = "https://github.com/uvop/memorix"
authors = ["Yuval Saraf <unimonkiez@gmail.com>"]
description = "Memorix is an open source next-generation in-memory ORM"
readme = "../../../../README.md"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
